# leptonic_tauri_book_demo

./: Cargo.toml  README.md  index.html
src/: .gitignore  README.md  Trunk.toml  app.rs  index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/documentation/getting_started/: overview.rs
