[package]
name = "rfid_mgt-ui"
version = "0.0.0"
edition = "2021"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binaty size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"


#from leptonic
#console_error_panic_hook = "0.1.7"
leptonic = { git = "https://github.com/lpotthast/leptonic", branch = "main", features = ["csr","clipboard", "tiptap"] }
#leptonic = { version = "0.5.0", features = ["csr"] }
#leptos = { version = "0.6.5", features = ["csr"] }
leptos_meta = { version = "0.6.5", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

leptos-use = "0.10.3"
ordered-float = "4.2.0"
ringbuf = "0.3.3"
#serde = "1.0.196"
#serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
time = { version = "0.3.34", features = ["wasm-bindgen"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "signal"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.1", features = ["full"], optional = true }
uuid = { version = "1.7.0", features = ["js", "v4", "serde"] }
#wasm-bindgen = "0.2.91"
axum = { version = "0.7.4", optional = true }
axum-server = { version = "0.6.0", features = ["tls-rustls"], optional = true }
cfg-if = "1.0.0"
http = "1.0.0"
indoc = "2.0.4"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory. Relative to your project root.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory. Relative to your project root.
# Leptonic's `<Root>` component expects JS files to be available at a "js" directory at runtime (for dynamic script includes). Specify a different prop value if you choose a non-standard location here. 
js-dir = "public/js"
